[tool.poetry]
name = "rater-api"
version = "0.1.0"
description = ""
authors = ["frankdelan <frank.danil704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi = {extras = ["all"], version = "^0.111.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
